charts/remote-charts/prometheus-operator/patches/prometheusOperator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-operator
  namespace: monitoring
spec: {}
