charts/remote-charts/prometheus-operator/patches/patch-prometheusOperator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator
  namespace: monitoring
spec:
  template:
    metadata:
      namespace: monitoring-system
