charts/remote-charts/prometheus-operator/patches/prometheusOperator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator
  namespace: monitoring
spec: {}
