charts/remote-charts/prometheus-operator/patches/prometheusOperator-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prometheus-operator
  namespace: monitoring
spec: {}
